--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,3 +1,14 @@
-h1 {
-  color: red;
-}
+@import "fonts.scss";
+@import "variables.scss";
+@import "global.scss";
+@import "blocks/visually-hidden.scss";
+@import "blocks/page.scss";
+@import "blocks/btn.scss";
+@import "blocks/nav-toggle.scss";
+@import "blocks/header.scss";
+@import "blocks/main-nav.scss";
+@import "blocks/container.scss";
+@import "blocks/intro.scss";
+@import "blocks/title.scss";
+@import "blocks/products-catalog.scss";
+@import "blocks/card.scss";
