--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -51,6 +51,6 @@
     height: 16px;
     right: 40px;
     top: 30px;
-    background-image: url("../img/arrow.svg");
+    background-image: url("../img/arrow-right.svg");
   }
 }
