--- a/source/sass/blocks/nav-toggle.scss
+++ b/source/sass/blocks/nav-toggle.scss
@@ -3,8 +3,8 @@
 
   @media (max-width: $tablet-width) {
     position: absolute;
-    top: -25px;
-    right: -20px;
+    top: -41px;
+    right: 4%;
     z-index: 2;
     display: block;
     width: 72px;
