--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -10,6 +10,7 @@
   text-align: center;
   color: $white;
   text-decoration: none;
+  letter-spacing: 2px;
   text-transform: uppercase;
   background-color: $maincolor;
 
