--- a/source/sass/blocks/card.scss
+++ b/source/sass/blocks/card.scss
@@ -1,9 +1,94 @@
 .card {
+  position: relative;
   flex: 0 1 350px;
   margin-right: 60px;
   margin-bottom: 100px;
+
+  &:after {
+    display: none;
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 2;
+    width: 100%;
+    height: 98%;
+    background: fade-out($darkgrey, 0.6);
+  }
+
+  &:hover::after {
+    display: block;
+  }
+
+  &:hover .card__button {
+    display: block;
+    z-index: 5;
+  }
+
+  @media (max-width: $tablet-width) {
+    flex: 0 1 288px;
+    margin-right: 29px;
+    margin-bottom: 19px;
+  }
+
+  @media (max-width: $mobile-width) {
+    margin-right: 0;
+  }
 }
 
-.card:nth-child(3n) {
+@media (min-width: 1170px) {
+  .card:nth-child(3n) {
   margin-right: 0;
+  }
+}
+
+@media (max-width: 1169px) {
+  .card:nth-child(2n) {
+  margin-right: 0;
+  }
+}
+
+.card__title {
+  position: absolute;
+  bottom: 9px;
+  left: 67px;
+  margin: 0;
+  padding-top: 17px;
+  width: 215px;
+  height: 63px;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 29px;
+  text-align: center;
+  color: $darkgrey;
+  background-color: $white;
+
+  @media (max-width: $tablet-width) {
+    left: 35px;
+  }
+}
+
+.card__button {
+  z-index: 6;
+  display: none;
+  position: absolute;
+  top: 200px;
+  right: 42px;
+  margin: 0;
+  padding: 30px 25px;
+  width: 266px;
+  border: 1px solid rgba(255, 255, 255, 0.7);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
+  color: $white;
+  text-decoration: none;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  cursor: pointer;
+
+  @media (max-width: $tablet-width) {
+    left: 11px;
+  }
 }
