--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -26,7 +26,9 @@
   flex: 1;
 
   @media (max-width: $tablet-width) {
-    margin-top: 10px;
+    width: 44px;
+    height: 17px;
+    margin-top: 15px;
     margin-left: 21px;
     margin-right: auto;
   }
