--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -2,11 +2,27 @@
   background-image: url("../img/intro-desktop@1x.jpg");
   background-color: #507da1;
   background-repeat: no-repeat;
+  background-size: cover;
   background-position: center;
 
   @media (min-resolution: 2dppx) {
     background-image: url("../img/intro-desktop@2x.jpg");
     background-size: 3840px auto;
+  }
+
+  @media (max-width: $tablet-width) {
+    background-image: url("../img/intro-tablet@1x.jpg");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/intro-tablet@2x.jpg");
+      background-size: 1536px auto;
+    }
+  }
+
+  @media (max-width: $mobile-width) {
+    background-image: none;
+    background-color: transparent;
+    margin-bottom: 100px;
   }
 }
 
@@ -16,6 +32,18 @@
   margin-right: 50px;
   padding-top: 176px;
   padding-bottom: 300px;
+
+  @media (max-width: $tablet-width) {
+    margin: 0 auto;
+    padding-top: 51px;
+    padding-bottom: 80px;
+    text-align: center;
+  }
+
+  @media (max-width: $mobile-width) {
+    width: 100%;
+    padding: 0;
+  }
 }
 
 .intro__title {
@@ -25,6 +53,27 @@
   font-size: 55px;
   line-height: 80px;
   color: $white;
+
+  @media (max-width: $tablet-width) {
+    font-size: 30px;
+    line-height: 150%;
+    margin-bottom: 15px;
+  }
+
+  @media (max-width: $mobile-width) {
+    padding: 80px 20px;
+    font-size: 24px;
+    background-image: url("../img/intro-mobile@1x.jpg");
+    background-color: #507da1;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/intro-mobile@2x.jpg");
+      background-size: 640px auto;
+    }
+  }
 }
 
 .intro__text {
@@ -35,12 +84,23 @@
   font-size: 16px;
   line-height: 170%;
   color: $white;
+
+  @media (max-width: $tablet-width) {
+   width: 400px;
+   margin-bottom: 15px;
+  }
+
+  @media (max-width: $mobile-width) {
+    width: auto;
+    margin: 0 16px;
+    margin-bottom: 20px;
+    color: $lightgrey;
+   }
 }
 
 .intro__link {
   position: relative;
   width: 340px;
-  height: 75px;
   padding: 30px 40px;
   text-align: left;
 
@@ -52,5 +112,22 @@
     right: 40px;
     top: 30px;
     background-image: url("../img/arrow-right.svg");
+
+    @media (max-width: $tablet-width) {
+      top: 20px;
+    }
   }
+
+  @media (max-width: $tablet-width) {
+    width: 250px;
+    margin: 0 auto;
+    padding: 20px 40px;
+    font-weight: 500;
+    font-size: 10px;
+    line-height: 12px;
+  }
+
+  @media (max-width: $mobile-width) {
+    width: 288px;
+   }
 }
