--- a/source/sass/blocks/nav-toggle.scss
+++ b/source/sass/blocks/nav-toggle.scss
@@ -3,8 +3,8 @@
 
   @media (max-width: $tablet-width) {
     position: absolute;
-    top: -41px;
-    right: 4%;
+    top: -32px;
+    right: 0;
     z-index: 2;
     display: block;
     width: 72px;
@@ -12,6 +12,10 @@
     cursor: pointer;
     border: none;
     background-color: $maincolor;
+  }
+
+  @media (max-width: $mobile-width) {
+    width: 50px;
   }
 
   &:hover,
