--- a/source/sass/blocks/title.scss
+++ b/source/sass/blocks/title.scss
@@ -14,4 +14,17 @@
     height: 4px;
     background-color: $maincolor;
   }
+
+  @media (max-width: $tablet-width) {
+    font-size: 30px;
+    line-height: 150%;;
+
+    &::after {
+      content: none;
+    }
+  }
+
+  @media (max-width: $mobile-width) {
+    font-size: 24px;
+  }
 }
