--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -12,3 +12,7 @@
 @import "blocks/title.scss";
 @import "blocks/products-catalog.scss";
 @import "blocks/card.scss";
+@import "blocks/footer.scss";
+@import "blocks/places.scss";
+@import "blocks/contacts.scss";
+@import "blocks/offer.scss";
