--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -1,22 +1,22 @@
 .products {
-  margin-bottom: 138px;
+  margin-bottom: 136px;
   background: url("../img/products-bg.svg") no-repeat;
   background-size: auto;
-  background-position: center 120px;
+  background-position: center 134px;
 
   @media (max-width: $tablet-width) {
     background: none;
-    margin-bottom: 125px;
+    margin-bottom: 123px;
   }
 
   @media (max-width: $mobile-width) {
-    margin-bottom: 50px;
+    margin-bottom: 22px;
   }
 }
 
 .products__list {
   margin: 0;
-  margin-bottom: 50px;
+  margin-bottom: 80px;
   padding: 0;
   width: fit-content;
   list-style: none;
@@ -26,23 +26,24 @@
 
   @media (max-width: $tablet-width) {
     margin-left: 37px;
+    margin-bottom: 20px;
   }
 
   @media (max-width: $mobile-width) {
     margin-left: 15px;
-    margin-bottom: 0;
+    margin-bottom: 12px;
   }
 }
 
 .products__item {
-  margin-bottom: 30px;
-  padding-right: 100px;
+  padding-right: 96px;
+  padding-bottom: 12px;
   border-bottom: 1px solid fade-out($lightgrey, 0.7);
 }
 
 .products__item:nth-child(4) {
   @media (max-width: $tablet-width) {
-    padding-right: 73px;
+    padding-right: 24px;
   }
 
   @media (max-width: $mobile-width) {
@@ -58,7 +59,7 @@
 
 .products__item:nth-child(2) {
   @media (max-width: $mobile-width) {
-    padding-right: 59px;
+    padding-right: 40px;
   }
 }
 
