--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -3,7 +3,7 @@
   min-width: 176px;
   height: fit-content;
   padding: 30px 0;
-  font-style: inherit;
+  font-family: inherit;
   font-size: 12px;
   line-height: 15px;
   font-weight: bold;
