--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -3,7 +3,7 @@
   width: 656px;
   padding: 50px;
   background-color: $white;
-  box-shadow: 0px 4px 30px rgba(41, 54, 66, 0.1);
+  box-shadow: 0 4px 30px rgba(41, 54, 66, 0.1);
   border-radius: 5px;
   text-align: center;
 
@@ -21,7 +21,7 @@
 
 .form__title {
   margin: 0;
-  margin-bottom: 10px;
+  margin-bottom: 12px;
   font-weight: 600;
   font-size: 25px;
   line-height: 32px;
@@ -33,7 +33,7 @@
 
 .form__text {
   margin: 0;
-  margin-bottom: 24px;
+  margin-bottom: 23px;
 
   @media (max-width: $mobile-width) {
     margin-bottom: 20px;
@@ -45,6 +45,10 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+
+  @media (max-width: $tablet-width) {
+    margin-bottom: 20px;
+  }
 
   @media (max-width: $mobile-width) {
     margin-bottom: 0;
@@ -66,6 +70,10 @@
   margin: 0 auto;
   padding: 18px 40px;
   border: none;
+
+  @media (max-width: $tablet-width) {
+    width: 250px;
+  }
 
   @media (max-width: $mobile-width) {
     width: 100%;
