--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -12,14 +12,14 @@
   content: "";
   position: absolute;
   top: 17px;
-  left: 21px;
-  width: 30px;
+  left: 24px;
+  width: 22px;
   height: 1px;
   background-color: #dadada;
-  box-shadow: 0 5px 0 0 #dadada, 0 10px 0 0 #dadada;
+  box-shadow: 0 7px 0 0 #dadada, 0 13px 0 0 #dadada;
 
   @media (max-width: $mobile-width) {
-    left: 11px;
+    left: 14px;
   }
 }
 
@@ -39,7 +39,8 @@
 
 .main-nav--opened .main-nav__toggle {
   top: 15px;
-  right: -20px;
+  right: 25px;
+  width: 23px;
   height: 23px;
   background-color: transparent;
 
@@ -71,12 +72,17 @@
 
 .main-nav__list {
   margin: 0;
+  margin-left: auto;
+  margin-right: 15px;
+  padding: 0;
   display: flex;
   flex-direction: row;
+  align-items: baseline;
   flex-wrap: wrap;
   list-style: none;
 
   @media (max-width: $tablet-width) {
+    margin: 0;
     padding-left: 0;
     width: 100%;
     flex-direction: column;
@@ -89,7 +95,6 @@
   @media (max-width: $tablet-width) {
     position: relative;
     width: 100%;
-    padding: 17px;
     background-color: #fbf8f8;
     margin-bottom: 30px;
 
@@ -102,6 +107,10 @@
       right: 20px;
       background: url("../img/arrow-down.svg") no-repeat;
     }
+
+    &--phone {
+      display: none;
+    }
   }
 }
 
@@ -111,23 +120,16 @@
 
 .main-nav__item:not(:last-child) {
   @media (min-width: $desktop-width-only) {
-    margin-right: 40px;
-  }
-}
-
-.main-nav__item--phone {
-  position: relative;
-  padding-left: 40px;
-
-  @media (max-width: $tablet-width) {
-    display: none;
+    margin-right: 38px;
   }
 }
 
 .main-nav__link {
-  font-weight: 500;
   text-decoration: none;
   color: $darkgrey;
+  font-size: 14px;
+  line-height: 17px;
+  font-weight: 500;
 
   &:hover {
     color: $maincolor;
@@ -138,6 +140,9 @@
   }
 
   @media (max-width: $tablet-width) {
+    display: block;
+    padding: 17px;
+    width: 100%;
     font-weight: 600;
     font-size: 20px;
     line-height: 28px;
@@ -145,10 +150,21 @@
   }
 }
 
+.main-nav__link--phone {
+  position: relative;
+  padding-left: 56px;
+  font-size: 18px;
+  line-height: 32px;
+
+  @media (max-width: $tablet-width) {
+    display: none;
+  }
+}
+
 .main-nav__link-icon {
   position: absolute;
-  top: 0;
-  left: 5px;
+  top: -3px;
+  left: 21px;
   fill: none;
   stroke: $darkgrey;
 }
