--- a/source/sass/blocks/modal-overlay.scss
+++ b/source/sass/blocks/modal-overlay.scss
@@ -6,5 +6,5 @@
   display: none;
   width: 100%;
   height: 100%;
-  background-color: rgba(255,255,255,.9);
+  background-color: rgba(255, 255, 255, 0.9);
 }
