--- a/source/sass/blocks/package.scss
+++ b/source/sass/blocks/package.scss
@@ -1,10 +1,12 @@
 .package {
+  margin-right: 30px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding: 30px;
   padding-top: 40px;
-  background: #FFFFFF;
+  width: 370px;
+  background: $white;
   border: 1px solid fade-out($darkgrey, 0.7);
   border-radius: 6px;
 
@@ -30,17 +32,24 @@
   }
 
   @media (max-width: $tablet-width) {
+    margin-right: 50px;
     padding: 0;
     padding-top: 30px;
+    width: 288px;
   }
 
   @media (max-width: $mobile-width) {
     margin-bottom: 30px;
+    margin-right: 0;
   }
 }
 
+.package:last-child {
+  margin-right: 0;
+}
+
 .package__header {
-  margin-bottom: 40px;
+  margin-bottom: 36px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -57,8 +66,14 @@
 .package__title {
   margin: 0;
   font-weight: 600;
-  font-size: 28px;
+  font-size: 27px;
   line-height: 38px;
+
+  @media (max-width: $tablet-width) {
+    margin-bottom: 11px;
+    font-size: 24px;
+    line-height: 34px;
+  }
 }
 
 .package__cost {
@@ -71,6 +86,7 @@
 .package__text {
   margin: 0;
   margin-bottom: 30px;
+  padding-right: 16px;
   padding-bottom: 28px;
   border-bottom: 1px solid fade-out($lightgrey, 0.7);
   color: $lightgrey;
@@ -79,7 +95,7 @@
     margin: 0 20px;
     margin-bottom: 20px;
     padding: 0 10px;
-    padding-bottom: 10px;
+    padding-bottom: 8px;
     text-align: center;
   }
 }
@@ -87,13 +103,13 @@
 .package__list {
   margin: 0;
   margin-bottom: auto;
-  padding-left: 20px;
+  padding-left: 29px;
   padding-right: 42px;
   list-style: none;
 
   @media (max-width: $tablet-width) {
     padding-left: 50px;
-  padding-right: 41px;
+    padding-right: 15px;
   }
 }
 
@@ -101,15 +117,31 @@
   position: relative;
   margin-bottom: 15px;
   line-height: 32px;
+
+  @media (max-width: $tablet-width) {
+    margin-bottom: 9px;
+  }
 }
 
 .package__icon {
   position: absolute;
-  top: 9px;
-  left: -23px;
+  top: 10px;
+  left: -30px;
   fill: $maincolor;
 }
 
 .package__button {
   margin-top: 15px;
+
+  @media (max-width: $tablet-width) {
+    margin-top: 25px;
+    padding: 19px;
+    font-weight: 500;
+    font-size: 10px;
+    line-height: 12px;
+  }
+
+  @media (max-width: $mobile-width) {
+    margin-top: 20px;
+  }
 }
