--- a/source/sass/blocks/price.scss
+++ b/source/sass/blocks/price.scss
@@ -1,28 +1,37 @@
 .price {
-  padding-top: 238px;
+  padding-top: 232px;
 
   @media (max-width: $tablet-width) {
-    padding-top: 80px;
+    padding-top: 104px;
   }
 }
 
 .price__container {
-  display: grid;
-  grid-template-columns: repeat(3, minmax(300px, 370px));
-  column-gap: 30px;
+  display: flex;
 
   @media (max-width: $tablet-width) {
-    margin: 0 71px;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: auto auto;
-    column-gap: 50px;
-    row-gap: 30px;
+    margin: 0 31px;
+    flex-direction: column;
   }
 
   @media (max-width: $mobile-width) {
-    margin: 0 15px;
+    margin: 0 16px;
     display: flex;
     flex-direction: column;
+  }
+}
+
+.price__block {
+  display: flex;
+  flex-direction: row;
+
+  @media (max-width: $tablet-width) {
+    padding: 0 40px;
+  }
+
+  @media (max-width: $mobile-width) {
+    flex-direction: column;
+    padding: 0;
   }
 }
 
@@ -31,34 +40,37 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 100px 0;
+  padding: 116px 0 96px;
   padding-right: 0;
-  padding-left: 27%;
+  padding-left: 111px;
 
   @media (max-width: $tablet-width) {
     order: 0;
     grid-column: 1 / 3;
     padding: 0;
+    margin-bottom: 28px;
     text-align: center;
   }
 
   @media (max-width: $mobile-width) {
-    padding: 0 20px;
-    margin-bottom: 40px;
+    margin-bottom: 36px;
   }
 }
 
 .price__text {
   margin: 0;
   margin-bottom: 60px;
+  font-size: 15px;
+  line-height: 27px;
+  letter-spacing: 0.5px;
   color: fade-out($lightgrey, 0.3);
 
   @media (max-width: $tablet-width) {
-    margin-bottom: 30px;
+    margin-bottom: 32px;
   }
 
   @media (max-width: $mobile-width) {
-    margin-bottom: 20px;
+    margin-bottom: 16px;
   }
 }
 
@@ -72,11 +84,13 @@
 
   @media (max-width: $tablet-width) {
     padding-left: 0;
+    font-size: 18px;
+    line-height: 34px;
   }
 }
 
 .price__phone {
-  position:relative;
+  position: relative;
   padding-left: 45px;
   color: $darkgrey;
   text-decoration: none;
@@ -99,7 +113,7 @@
 .price__phone-icon {
   position: absolute;
   top: 0;
-  left: 0;
+  left: -4px;
   stroke: $maincolor;
   fill: none;
 
