--- a/source/sass/blocks/review.scss
+++ b/source/sass/blocks/review.scss
@@ -1,22 +1,25 @@
 .review {
   padding: 30px;
+  padding-bottom: 35px;
   position: absolute;
-  top: 50%;
+  top: 49%;
   right: 0;
-  width: 356px;
+  width: 382px;
   background-color: $white;
-  transform:translate(0, -50%);
+  transform: translate(0, -50%);
 
   @media (max-width: $tablet-width) {
     top: auto;
-    bottom: -20px;
-    left:50%;
+    bottom: -23px;
+    left: 50%;
     right: auto;
-    transform:translate(-50%, 0);
+    transform: translate(-50%, 0);
   }
 
   @media (max-width: $mobile-width) {
-    padding: 28px;
+    padding: 0 20px;
+    padding-top: 30px;
+    padding-bottom: 15px;
     width: 268px;
     bottom: -40px;
     text-align: center;
@@ -24,18 +27,19 @@
 }
 
 .review__title {
-  margin-bottom: 32px;
+  margin-bottom: 35px;
   font-weight: 500;
-  font-size: 30px;
+  font-size: 29px;
   line-height: 37px;
 
   @media (max-width: $mobile-width) {
+    margin-bottom: 33px;
     font-size: 20px;
     line-height: 24px;
   }
 
   &::after {
-    bottom: -11px;
+    bottom: -14px;
     width: 68px;
     height: 1px;
 
@@ -44,7 +48,7 @@
     }
 
     @media (max-width: $mobile-width) {
-      left: 70px;
+      left: 80px;
     }
   }
 }
@@ -55,12 +59,14 @@
 
 .review__text {
   margin: 0;
-  margin-bottom: 32px;
+  margin-bottom: 38px;
   font-size: 14px;
+  line-height: 28px;
+  letter-spacing: -0.408333px;
   color: fade-out($lightgrey, 0.3);
 
   @media (max-width: $mobile-width) {
-    margin-bottom: 68px;
+    margin-bottom: 63px;
   }
 }
 
@@ -69,15 +75,15 @@
   padding-left: 55px;
   font-style: normal;
   font-weight: 500;
-  font-size: 16px;
+  font-size: 15px;
   line-height: 20px;
   color: $lightgrey;
   background-repeat: no-repeat;
 
   @media (max-width: $mobile-width) {
     margin: 0 auto;
-    padding-left: 0;
-    padding-top: 45px;
+    padding-left: 16px;
+    padding-top: 48px;
     background-position: center 0;
   }
 
