--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -4,8 +4,8 @@
   font-weight: 400;
   font-display: swap;
   src:
-    url("../fonts/montserrat.woff2") format("woff2"),
-    url("../fonts/montserrat.woff") format("woff");
+    url("../fonts/montserrat-regular.woff2") format("woff2"),
+    url("../fonts/montserrat-regular.woff") format("woff");
 }
 
 @font-face {
@@ -14,8 +14,8 @@
   font-weight: 500;
   font-display: swap;
   src:
-    url("../fonts/montserrat500.woff2") format("woff2"),
-    url("../fonts/montserrat500.woff") format("woff");
+    url("../fonts/montserrat-500.woff2") format("woff2"),
+    url("../fonts/montserrat-500.woff") format("woff");
 }
 
 @font-face {
@@ -24,8 +24,8 @@
   font-weight: 600;
   font-display: swap;
   src:
-    url("../fonts/montserrat600.woff2") format("woff2"),
-    url("../fonts/montserrat600.woff") format("woff");
+    url("../fonts/montserrat-600.woff2") format("woff2"),
+    url("../fonts/montserrat-600.woff") format("woff");
 }
 
 @font-face {
@@ -34,6 +34,6 @@
   font-weight: 700;
   font-display: swap;
   src:
-    url("../fonts/montserrat700.woff2") format("woff2"),
-    url("../fonts/montserrat700.woff") format("woff");
+    url("../fonts/montserrat-700.woff2") format("woff2"),
+    url("../fonts/montserrat-700.woff") format("woff");
 }
